plugins {
    id 'org.springframework.boot' version '2.3.3.RELEASE'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
}

bootJar {
    enabled = false
}

allprojects {

    repositories {
        mavenCentral()
        jcenter()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'groovy'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'io.segmentme'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '14'
    targetCompatibility = '14'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        compileOnly 'org.projectlombok:lombok'
        compile 'commons-beanutils:commons-beanutils:1.9.4'

        annotationProcessor 'org.projectlombok:lombok'

        testImplementation('org.springframework.boot:spring-boot-starter-test') {
            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        }
        testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
        testImplementation "org.spockframework:spock-core:2.0-M3-groovy-3.0"
        testImplementation "org.spockframework:spock-spring:2.0-M3-groovy-3.0"
        testImplementation "cglib:cglib-nodep:3.3.0"
        testImplementation 'org.codehaus.groovy:groovy:3.0.5'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
    }

    test {
        useJUnitPlatform()
    }
}
